--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,37 @@
   --background-btn-filters: #f4f4fd;
 }
 
+button {
+  cursor: pointer;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+img {
+  display: block;
+}
+
+ul,
+ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
 ol,
 .list {
   list-style: none;
 }
+
 .link {
   list-style: none;
   text-decoration: none;
@@ -25,14 +52,19 @@ body {
 
 /*=============== Components ================= */
 
+.container {
+  padding: 0 15px;
+  width: 1196px;
+  margin: 0 auto;
+}
+
 .modal-btn-blue {
+  padding: 13px 15px;
+  height: 43px;
   font-family: var(--secondary-font);
   font-weight: 700;
   font-size: 13px;
   line-height: 1.23;
-  width: 113px;
-  height: 43px;
-  cursor: pointer;
   border: none;
   background-color: var(--first-background-color);
   color: var(--accent-color);
@@ -45,6 +77,7 @@ body {
 }
 
 .subtitle {
+  margin-bottom: 16px;
   font-weight: 500;
   font-size: 10px;
   line-height: 1.2;
@@ -58,7 +91,6 @@ body {
   font-weight: 400;
   font-size: 15px;
   line-height: 1.93;
-  text-align: center;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
@@ -72,9 +104,62 @@ body {
   color: var(--primary-text-color);
 }
 
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
 /*=============== Components ================= */
 
 /*=============== Header ===================== */
+
+.nav-btn {
+  margin-left: 35px;
+}
+
+.social-list {
+  gap: 34px;
+  display: flex;
+  align-items: center;
+}
+
+.social-btn {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+}
+
+.nav-link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 33px;
+}
+
+.nav-list {
+  gap: 42px;
+  display: flex;
+  align-items: center;
+}
+
+.logo-link {
+  display: block;
+  padding-top: 22px;
+  padding-bottom: 24px;
+  margin-right: 73px;
+}
+
+.page-nav {
+  display: flex;
+  align-items: center;
+}
 
 .logo-link {
   font-family: var(--secondary-font);
@@ -119,7 +204,29 @@ body {
 
 /*=============== Hero =================== */
 
+.hero-text-wrapper {
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hero-text {
+  text-align: center;
+}
+
+.hero-wrapper {
+  padding-top: 91px;
+  padding-bottom: 91px;
+}
+
+.hero-page {
+  background: linear-gradient(180deg, #f4f7ff 0%, #f1f5ff 100%);
+  border-top: 1px solid #d8e3fe;
+  border-bottom: 1px solid #d8e3fe;
+}
+
 .hero-title {
+  margin-bottom: 28px;
   font-family: var(--secondary-font);
   font-weight: 300;
   font-size: 48px;
@@ -137,46 +244,78 @@ body {
   color: var(--primary-text-color);
 }
 
-/* .hero {
-  position: absolute;
-  width: 1440px;
-  background: linear-gradient(180deg, #f4f7ff 0%, #f1f5ff 100%);
-} */
-
 /*=============== Hero =================== */
+
+/*=============== Partners =============== */
+
+.partners-list {
+  gap: 76px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.partners-wrapper {
+  padding-top: 58px;
+  padding-bottom: 58px;
+}
 
 .partners-logo {
   width: 116px;
   height: 29px;
 }
 
-/* .partners {
-  position: absolute;
-  width: 1440px;
-  left: 0px;
-  top: 650px;
-  background: #ffffff;
-} */
-
-/*=============== Hero =================== */
+/*=============== Partners =============== */
 
 /*=============== Plan manage ============= */
 
+.plan-manage-text {
+  margin-bottom: 47px;
+}
+
+.plan-manage-btn {
+  display: flex;
+  align-items: center;
+}
+
+.plan-manage-title {
+  margin-bottom: 27px;
+}
+
+.plan-manage-left {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.plan-manage-wrapper {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  padding-top: 130px;
+  padding-bottom: 130px;
+}
+
+.plan-manage {
+  background: #f2f6ff;
+}
+
 .modal-btn-stroke {
+  padding: 13px 15px;
   font-family: var(--secondary-font);
   font-weight: 500;
   font-size: 13px;
   line-height: 1.23;
-  width: 113px;
   height: 43px;
   cursor: pointer;
   background-color: transparent;
-  border: 2px solid var(--secondary-text-color);
+  border: 1px solid var(--secondary-text-color);
   color: var(--secondary-text-color);
 }
 
 .modal-btn-stroke:hover,
 .modal-btn-stroke:focus {
+  border: 1px solid var(--accent-color);
   background-color: var(--accent-color);
   color: white;
 }
@@ -184,6 +323,51 @@ body {
 /*=============== Plan manage ============= */
 
 /*=============== About us ================ */
+
+.about-us-btn {
+  gap: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.about-us-item {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 92px;
+}
+
+.about-us-list {
+  gap: 67px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 223px;
+  margin-right: 223px;
+}
+
+.about-us-main-title {
+  margin-bottom: 92px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.25;
+  text-align: center;
+  color: var(--primary-text-color);
+}
+
+.about-us-wrapper {
+  padding-top: 130px;
+  padding-bottom: 130px;
+}
+
+.about-us {
+  background-image: url('/img-about-us/clouds.png');
+  background-repeat: no-repeat;
+  background-position: 50% 70px;
+  border-top: 1px solid #d8e3fe;
+  border-bottom: 1px solid #d8e3fe;
+}
 
 .text-between-btn {
   font-weight: 600;
@@ -194,13 +378,11 @@ body {
 }
 
 .modal-btn-pink {
+  padding: 13px 15px;
   font-family: var(--secondary-font);
   font-weight: 700;
   font-size: 13px;
   line-height: 1.23;
-  width: 113px;
-  height: 43px;
-  cursor: pointer;
   border: none;
   background-color: #ffd7d7;
   color: #d43f3f;
@@ -213,10 +395,12 @@ body {
 }
 
 .about-us-title {
+  margin-top: 33px;
+  margin-bottom: 25px;
   font-weight: 700;
   font-size: 14px;
   line-height: 177.04%;
-  /* text-align: center; */
+  text-align: center;
   color: var(--accent-color);
 }
 
@@ -224,7 +408,7 @@ body {
   font-weight: 500;
   font-size: 11px;
   line-height: 177.04%;
-  /* text-align: center; */
+  text-align: center;
   color: var(--secondary-text-color);
 }
 
